<resources>
    <string name="app_name">АМО лабораторна 3</string>
    <string name="function_select">Виберіть функцію для інтерполяції</string>
    <string name="interpolation_range">Виберіть проміжок для інтерполяції</string>
    <string name="min_range">Мінімальне</string>
    <string name="max_range">Максимальне</string>
    <string name="key_pts">Кількість ключових точок</string>
    <string name="interpolate">Інтерполювати функцію</string>
    <string name="infelicity">Абсолютна похибка:</string>
    <string-array name="drop_list">
        <item>sin x</item>
        <item>e<sup>-(x+sin x)</sup></item>
    </string-array>
</resources>
