<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="true"
            android:background="@color/colorBackgroundFloating">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">
        <Spinner
                android:layout_width="224dp"
                android:entries="@array/drop_list"
                android:layout_height="27dp"
                android:id="@+id/function_type"
                android:spinnerMode="dropdown"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="93dp"
                android:layout_marginStart="93dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="94dp"
                android:layout_marginRight="94dp"/>
        <TextView
                android:text="@string/function_select"
                android:gravity="center"
                android:layout_width="379dp"
                android:layout_height="25dp"
                android:id="@+id/textView"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:textColor="@color/text_color"/>
        <TextView
                android:text="@string/interpolation_range"
                android:gravity="center"
                android:layout_width="379dp"
                android:layout_height="27dp"
                android:id="@+id/textView2"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/function_type"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:textColor="@color/text_color"/>
        <TextView
                android:text="@string/key_pts"
                android:gravity="center"
                android:layout_width="379dp"
                android:layout_height="27dp"
                android:id="@+id/textView5"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:textColor="@color/text_color"
                android:layout_marginTop="5dp" app:layout_constraintTop_toBottomOf="@+id/power"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"/>
        <EditText
                android:layout_width="122dp"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:ems="10"
                android:id="@+id/min_val"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="37dp"
                android:layout_marginStart="37dp"
                android:textColor="@color/text_color"/>
        <EditText
                android:layout_width="122dp"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:ems="10"
                android:id="@+id/max_val"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="37dp"
                android:layout_marginRight="37dp"
                android:textColor="@color/text_color"/>
        <TextView
                android:text="@string/min_range"
                android:gravity="center|top"
                android:layout_width="124dp"
                android:layout_height="28dp"
                android:id="@+id/textView3"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@+id/min_val"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="36dp"
                android:layout_marginStart="36dp"
                android:textColor="@color/text_color"/>
        <TextView
                android:text="@string/max_range"
                android:gravity="center|top"
                android:layout_width="121dp"
                android:layout_height="28dp"
                android:id="@+id/textView4"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@+id/max_val"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="37dp"
                android:layout_marginRight="37dp"
                android:textColor="@color/text_color"/>
        <Button
                android:text="@string/interpolate"
                android:onClick="onClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="100dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="100dp"
                android:layout_marginRight="100dp"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/power"
                android:textColor="@color/text_color"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="104dp"
                android:layout_marginStart="104dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="104dp"
                android:layout_marginRight="104dp"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView3"/>

        <com.jjoe64.graphview.GraphView
                android:layout_width="367dp"
                android:layout_height="291dp"
                android:id="@+id/graph"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/button"
                android:visibility="gone"/>

        <com.jjoe64.graphview.GraphView
                android:layout_width="367dp"
                android:layout_height="291dp"
                android:id="@+id/graph_infelicity"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
                android:visibility="gone"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/graph"/>

        <com.jjoe64.graphview.GraphView
                android:layout_width="367dp"
                android:layout_height="291dp"
                android:id="@+id/graph_infelicity_bluriness"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
                android:visibility="gone"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/graph_infelicity"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>